# fisim

./: CMakeLists.txt  interface_in.ts  interface_out.ts  readme.md
src/: CMakeLists.txt  fisim-config.cmake
src/cashflow/: CMakeLists.txt
src/cashflow/include/: cashflow.h
src/cashflow/src/: cashflow.cc
src/common/: CMakeLists.txt
src/common/include/: binary_int_solver.h  types.h  uncertain_amount.h  utils_data.h  utils_math.h
src/common/src/: types.cc  uncertain_amount.cc
src/json_interface/: CMakeLists.txt
src/json_interface/include/: json_interface.h
src/json_interface/src/: json_helpers.cc  json_helpers.h  json_interface.cc  utils_parsing.h
src/loan/: CMakeLists.txt
src/loan/include/: acceleratedpay.h  loan.h  loan_controller.h  loan_handler.h  loanholiday.h  loanpayoff.h  repayment_option.h
src/loan/src/: acceleratedpay.cc  loan.cc  loan_controller.cc  loan_handler.cc  loanholiday.cc  loanpayoff.cc
src/simulation/: CMakeLists.txt
src/simulation/include/: sim_manager.h  simulator.h
src/simulation/src/: sim_manager.cc  simulator.cc
src/tax/: CMakeLists.txt
src/tax/include/: tax_account.h  tax_handler.h
src/tax/src/: tax_account.cc  tax_handler.cc
src/transactions/: CMakeLists.txt
src/transactions/include/: transacs_recorder.h
src/transactions/src/: transacs_recorder.cc
test/google-test/: CMakeLists.txt  CMakeLists.txt.in
test/google-test/cashflow_test/: CMakeLists.txt  cashflowAverageLoss_test.cc  cashflowRandomLoss_test.cc  cashflow_test.cc
test/google-test/cashflows_parser_test/: CMakeLists.txt  cashflow_items_test00.json  cashflows_parser_test.cc
test/google-test/common_test/: CMakeLists.txt  common_test.cc
test/google-test/loan_controllers_parser_test/: CMakeLists.txt  loan_controllers_parser_test.cc  loan_controllers_test00.json
test/google-test/loan_test/: CMakeLists.txt  acceleratedpay_test.cc  loan_test.cc  loancontroller_agg_test.cc  loancontroller_consv_test.cc  loancontroller_nor_test.cc  loanhandler_agg_test.cc  loanhandler_consv_test.cc  loanhandler_test.cc  loanholiday_test.cc  loanpayoff_test.cc
test/google-test/monthly_records_serializer_test/: CMakeLists.txt  monthly_records_serializer_test.cc
test/google-test/optimization_test/: CMakeLists.txt  binary_integer_programming_test.cc
test/google-test/simulation_test/: CMakeLists.txt  simulation_test.cc  simulation_test01.json
test/google-test/tax_handler_parser_test/: CMakeLists.txt  tax_accounts_test00.json  tax_handler_parser_test.cc
test/google-test/tax_test/: CMakeLists.txt  tax_account_test.cc  tax_handler_test.cc
test/google-test/transactions_test/: CMakeLists.txt  transactions_test.cc
test/google-test/utils_parsing_test/: CMakeLists.txt  utils_parsing_test.cc
